update component